# repl_verrechnung

./: main.py  nohup.out  pyproject.toml
neu/: KO_Verrechnung_CeBrACloudServer_extern_OK.xlsx  KO_Verrechnung_CeBrACloudServer_intern_OK.xlsx  KO_Verrechnung_CeBrACloud_Infrastructure_OK.xlsx
verrechnung.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vormonat/: KO_Verrechnung_CeBrACloudServer_extern_OK.xlsx  KO_Verrechnung_CeBrACloudServer_intern_OK.xlsx  KO_Verrechnung_CeBrACloud_Infrastructure_OK.xlsx
